# fountain

./: .gitignore  01_install_prerequisites.sh  02_check_lints.sh  02_start_heartbeat.sh  03_run_unit_tests.sh  03_verify_heartbeat.sh  04_run_sast.sh  04_stop_heartbeat.sh  05_start_heartbeat.sh  CMakeLists.txt  Makefile  README.md
.build/sast/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
.heartbeat/: heartbeat.sqlite3-shm  heartbeat.state
docs/: swift-interop.md
examples/cpp_basic/: CMakeLists.txt  heartbeat_runner.cpp  main.cpp
include/fountain/: fountain.h
requirements/: .gitignore-requirements.md  01_install_prerequisites-requirements.md  02_check_lints-requirements.md  02_start_heartbeat-requirements.md  03_run_unit_tests-requirements.md  03_verify_heartbeat-requirements.md  04_run_sast-requirements.md  04_stop_heartbeat-requirements.md  05_start_heartbeat-requirements.md  06_verify_heartbeat-requirements.md  07_stop_heartbeat-requirements.md  Makefile-requirements.md
src/: backoff.cpp  backoff.h  constants.h  event_json.h  event_json_nlohmann.cpp  fountain_c_api.cpp  fountain_runtime.cpp  fountain_runtime.h  fountain_types.h  id_utils.cpp  id_utils.h  queue_repository.cpp  queue_repository.h  time_utils.cpp  time_utils.h
src/sqlite/: db.cpp  db.h  statement.cpp  statement.h
tests/: CMakeLists.txt  fountain_batch_tests.cpp  fountain_c_api_safety_tests.cpp  fountain_heartbeat_tests.cpp  fountain_json_tests.cpp  fountain_privacy_tests.cpp  fountain_sqlite_tests.cpp  test_utils.h
tests/sh/: .gitignore.bats  01_install_prerequisites.bats  02_check_lints.bats  02_start_heartbeat.bats  03_run_unit_tests.bats  03_verify_heartbeat.bats  04_run_sast.bats  04_stop_heartbeat.bats  05_start_heartbeat.bats  06_verify_heartbeat.bats  07_stop_heartbeat.bats  Makefile.bats
